--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "egg": "^2.10.0",
+    "egg-mongoose": "^3.1.1",
     "egg-scripts": "^2.10.0",
     "egg-view-nunjucks": "^2.2.0",
     "moment": "^2.22.2"
