--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "egg": "^2.10.0",
     "egg-mongoose": "^3.1.1",
     "egg-scripts": "^2.10.0",
+    "egg-socket.io": "^4.1.5",
     "egg-view-nunjucks": "^2.2.0",
     "moment": "^2.22.2"
   },
   "devDependencies": {
-    "egg-bin": "^4.8.1"
+    "egg-bin": "^4.8.1",
+    "eslint": "^5.12.1",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.15.0"
   }
 }
