--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "egg-bin dev",
+    "dev": "egg-bin dev --sticky",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "egg-scripts start --daemon",
+    "start": "egg-scripts start --daemon --sticky",
     "stop": "egg-scripts stop"
   },
   "author": "victor",
