--- a/package.json
+++ b/package.json
@@ -12,20 +12,25 @@
   "author": "victor",
   "license": "ISC",
   "dependencies": {
+    "@nuxtjs/axios": "^5.5.4",
     "await-stream-ready": "^1.0.1",
-    "egg": "^2.15.1",
+    "egg": "^2.22.2",
     "egg-cors": "^2.2.0",
-    "egg-mongoose": "^3.1.1",
-    "egg-scripts": "^2.10.0",
-    "egg-socket.io": "^4.1.5",
+    "egg-mongoose": "^3.2.0",
+    "egg-scripts": "^2.11.0",
+    "egg-socket.io": "^4.1.6",
     "egg-view-nunjucks": "^2.2.0",
-    "moment": "^2.22.2",
+    "element-ui": "^2.10.1",
+    "moment": "^2.24.0",
+    "node-sass": "^4.12.0",
+    "nuxt": "^2.8.1",
+    "sass-loader": "^7.1.0",
     "stream-wormhole": "^1.1.0"
   },
   "devDependencies": {
-    "egg-bin": "^4.10.0",
-    "eslint": "^5.13.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.15.0"
+    "egg-bin": "^4.13.1",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.2.0",
+    "eslint-plugin-import": "^2.18.0"
   }
 }
