--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "egg-socket.io": "^4.1.6",
     "egg-view-nunjucks": "^2.2.0",
     "element-ui": "^2.10.1",
+    "highlight.js": "^9.15.8",
+    "marked": "^0.6.3",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "nuxt": "^2.8.1",
@@ -28,9 +30,12 @@
     "stream-wormhole": "^1.1.0"
   },
   "devDependencies": {
+    "acorn": "^6.1.1",
+    "acorn-dynamic-import": "^4.0.0",
     "egg-bin": "^4.13.1",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.2.0",
-    "eslint-plugin-import": "^2.18.0"
+    "eslint-plugin-import": "^2.18.0",
+    "webpack": "4.28.4"
   }
 }
