--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "egg-socket.io": "^4.1.6",
     "egg-view-nunjucks": "^2.2.0",
     "element-ui": "^2.11.1",
+    "highlight.js": "^9.15.9",
+    "marked": "^0.7.0",
     "moment": "^2.24.0",
     "nuxt": "^2.8.1",
     "stream-wormhole": "^1.1.0"
