--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "egg-view-nunjucks": "^2.2.0",
     "element-ui": "^2.13.0",
     "highlight.js": "^9.17.1",
+    "koa-compress": "^3.0.0",
     "marked": "^0.7.0",
     "moment": "^2.24.0",
     "nuxt": "^2.11.0",
