--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "marked": "^0.7.0",
     "moment": "^2.24.0",
     "nuxt": "^2.11.0",
-    "stream-wormhole": "^1.1.0"
+    "stream-wormhole": "^1.1.0",
+    "echarts": "^4.7.0"
   },
   "devDependencies": {
     "acorn": "^6.4.0",
