--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "koa-compress": "^3.0.0",
     "marked": "^0.7.0",
     "moment": "^2.24.0",
-    "nuxt": "^2.11.0",
+    "nuxt": "2.12.2",
     "stream-wormhole": "^1.1.0",
     "echarts": "^4.7.0"
   },
